--- a/recipes/carbon-c-relay/carbon-c-relay.service
+++ b/recipes/carbon-c-relay/carbon-c-relay.service
@@ -6,6 +6,7 @@ EnvironmentFile=/etc/default/carbon-c-relay
 User=carbon-c-relay
 Group=carbon-c-relay
 ExecStart=/usr/bin/carbon-c-relay $DAEMON_ARGS
+Restart=on-failure
 
 [Install]
 WantedBy=multi-user.target
